--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,17 @@
 @import './base/container';
 
 @import './components/_form-btn-modal';
+@import './components/contacts';
 
 @import './layout/header';
 @import './layout/hero';
+@import './layout/features';
+@import './layout/aboutus';
+@import './layout/team';
+@import './layout/client';
+@import './layout/work';
+
+
+
+
 
