--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,16 @@ ul {
   padding-bottom: 94px;
 }
 
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -85,24 +95,31 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color var(--transition-duration-function), box-shadow var(--transition-duration-function);
 }
-
-.form-button:hover,
-.form-button:focus,
-.form-button-modal:hover,
-.form-button-modal:focus {
+.form-button-modal:hover, .form-button-modal:focus {
   color: var(--primary-white-color);
   background-color: var(--primary-button-focus);
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 152px;
+  text-align: center;
+  border: 1px solid transparent;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.06em;
+  text-align: center;
 }
 
 .contacts {
   display: flex;
   margin-left: auto;
 }
-
-.contacts .item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .contacts .link {
   display: block;
   padding-top: 32px;
@@ -115,9 +132,18 @@ ul {
   text-decoration: none;
   transition: color var(--transition-duration-function);
 }
-
 .contacts .link.social {
   color: var(--title-text-color);
+}
+.contacts .link.current {
+  color: var(--accent-color);
+}
+.contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+.contacts .link:focus, .contacts .link:hover {
+  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 .icon-mail {
@@ -135,16 +161,359 @@ ul {
   align-items: center;
 }
 
-.contacts .link:focus,
-.contacts .link:hover {
+.social-list {
+  display: flex;
+  border: none;
+  margin: 0;
+  justify-content: center;
+}
+
+.social-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  fill: #AFB1B8;
+  transition: background-color var(--transition-duration-function), fill var(--transition-duration-function);
+}
+.social-link:hover, .social-link:focus {
+  background-color: var(--accent-color);
+  fill: var(--primary-white-color);
+}
+
+.social:not(:last-child) {
+  margin-right: 10px;
+}
+
+.logo {
+  color: var(--logo-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1, 19;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo:hover {
   color: var(--accent-color);
+}
+
+.logo-footer {
+  color: var(--primary-white-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1, 19;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo-footer:hover {
+  color: var(--accent-color);
+}
+
+.accent {
+  color: var(--accent-color);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 100;
+  opacity: 1;
+  transition: opacity var(--transition-duration-function);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  padding: 40px;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--transition-duration-function);
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: inherit;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.modal-close-icon {
+  transition: fill var(--transition-duration-function);
+}
+.modal-close-icon:focus, .modal-close-icon:hover {
   fill: var(--accent-color);
 }
 
-.contacts .link.current {
-  /* position: relative;
-  display: block; */
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-lable {
+  display: block;
+  margin-bottom: 4px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  padding: 10px 20px;
+  padding-left: 42px;
+  font: inherit;
+  font-size: 12px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transition: border var(--transition-duration-function);
+}
+
+.modal-title {
+  margin-bottom: 12px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form-container {
+  position: relative;
+  display: block;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: fill var(--transition-duration-function);
+}
+
+.form-input:focus {
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid var(--accent-color);
+}
+
+.form-input:focus ~ .form-icon {
+  fill: var(--accent-color);
+}
+
+.comment {
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  font-size: 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  transition: border var(--transition-duration-function);
+}
+
+.comment:focus {
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid var(--accent-color);
+}
+
+.comment::placeholder {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.policy-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: 13px; */
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #757575;
+}
+
+.contract {
   color: var(--accent-color);
+  text-decoration: underline;
+}
+
+.form-title {
+  margin-bottom: 20px;
+  height: 16px;
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.checkbox-input {
+  appearance: none;
+  position: absolute;
+}
+
+.checkbox-icon-on {
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+}
+
+.checkbox-icon-own-on {
+  display: none;
+}
+
+.checkbox-input:checked + .checkbox-icon-on {
+  background-color: var(--primary-button-focus);
+  border-color: var(--primary-button-focus);
+}
+
+.checkbox-input:checked + .checkbox-icon-on .checkbox-icon-own-on {
+  display: block;
+}
+
+.checkbox-input:focus + .checkbox-icon-on {
+  border-color: var(--primary-button-focus);
+}
+
+.footer-form {
+  display: flex;
+  gap: 12px;
+}
+
+.form-footer {
+  margin-left: auto;
+}
+
+.mailing-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  color: var(--border-color);
+  background-color: var(--primary-bg-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: border var(--transition-duration-function);
+}
+.mailing-input:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 28px;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  transition: background-color var(--transition-duration-function);
+}
+.form-button:hover, .form-button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--primary-button-focus);
+}
+
+.send-icon {
+  margin-left: 10px;
+}
+
+.button-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.button-nav .item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.button-nav .active {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.button.primary {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  transition: background-color var(--transition-duration-function);
+}
+.button.primary:hover, .button.primary:focus {
+  color: var(--primary-white-color);
+  background-color: var(--primary-button-focus);
+}
+
+.button.secondary {
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  min-width: auto;
+  font-weight: 500;
+  color: var(--primary-text-color);
+  background-color: var(--button-color);
+  transition: color var(--transition-duration-function), background-color var(--transition-duration-function), box-shadow var(--transition-duration-function);
+}
+.button.secondary:hover, .button.secondary:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .page-header {
@@ -152,14 +521,12 @@ ul {
   Border-bottom: 1px solid #ECECEC;
 }
 
-/* main nav */
 .main-nav {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* site nav */
 .page-navigation {
   display: flex;
   align-items: center;
@@ -169,11 +536,6 @@ ul {
   display: flex;
   margin-left: 93px;
 }
-
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .site-nav .link {
   position: relative;
   display: block;
@@ -187,14 +549,15 @@ ul {
   text-decoration: none;
   transition: color var(--transition-duration-function);
 }
-
+.site-nav .link.current {
+  color: var(--accent-color);
+}
 .site-nav .link:focus,
 .site-nav .link:hover {
   color: var(--accent-color);
 }
-
-.site-nav .link.current {
-  color: var(--accent-color);
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .current::after {
@@ -207,6 +570,11 @@ ul {
   height: 4px;
   border-radius: 2px;
   background-color: var(--accent-color);
+}
+
+.contacts .link:focus,
+.contacts .link:hover {
+  color: var(--accent-color);
 }
 
 .hero {
@@ -236,9 +604,25 @@ ul {
   display: flex;
   gap: 30px;
 }
-
 .features-list .item {
   flex-basis: calc((100% - 90px) / 4);
+}
+.features-list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.features-list .text {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--title-text-color);
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .icon-features {
@@ -251,30 +635,10 @@ ul {
   border-radius: 4px;
 }
 
-.features-list .title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  color: var(--primary-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.features-list .text {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: var(--title-text-color);
-  font-size: 14px;
-  line-height: 1.71;
-}
-
 .section.about {
   padding-top: 0;
 }
 
-/* features */
 .heading {
   display: flex;
   gap: 30px;
@@ -319,7 +683,6 @@ ul {
   display: flex;
   gap: 30px;
 }
-
 .team-list .title {
   margin-top: 30px;
   margin-bottom: 10px;
@@ -329,7 +692,6 @@ ul {
   line-height: 1.19;
   text-align: center;
 }
-
 .team-list .text {
   margin-bottom: 30px;
   color: var(--title-text-color);
@@ -337,47 +699,20 @@ ul {
   line-height: 1.19;
   text-align: center;
 }
-
 .team-list .card {
   flex-basis: calc((100% - 90px) / 4);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.social-list {
-  display: flex;
-  border: none;
-  margin: 0;
-  justify-content: center;
-}
-
-.social-link {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  fill: #AFB1B8;
-  transition: background-color var(--transition-duration-function), fill var(--transition-duration-function);
-}
-
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent-color);
-  fill: var(--primary-white-color);
-}
-
 .employees {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
 .employees .title {
   margin-top: 0;
   margin-bottom: 10px;
 }
-
 .employees .text {
   margin-top: 0;
   margin-bottom: 16px;
@@ -402,20 +737,16 @@ ul {
   border-radius: 4px;
   transition: border var(--transition-duration-function), fill var(--transition-duration-function);
 }
-
-.icon-company {
-  flex-basis: calc((100% - 150px) / 6);
-}
-
-.link-company:focus,
-.link-company:hover {
+.link-company:focus, .link-company:hover {
   border: 1px solid var(--accent-color);
   fill: var(--accent-color);
 }
-
-.link-company:focus .link-icon,
-.link-company:hover .link-icon {
+.link-company:focus .link-icon, .link-company:hover .link-icon {
   fill: var(--accent-color);
+}
+
+.icon-company {
+  flex-basis: calc((100% - 150px) / 6);
 }
 
 .work-list {
@@ -445,6 +776,10 @@ ul {
   text-decoration: none;
 }
 
+.work-list .card {
+  flex-basis: calc((100% - 60px) / 3);
+}
+
 .work-card {
   padding-top: 20px;
   padding-right: 24px;
@@ -453,10 +788,6 @@ ul {
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
-}
-
-.work-list .card {
-  flex-basis: calc((100% - 60px) / 3);
 }
 
 .work-list a:hover,
@@ -497,4 +828,91 @@ ul {
 a:hover .text-overlay,
 a:focus .text-overlay {
   transform: translateY(0);
+}
+
+.footer {
+  display: flex;
+  padding-top: 60px;
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-bottom: 60px;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: var(--primary-bg-color);
+}
+.footer .social-list {
+  display: flex;
+  width: 206px;
+  height: 44px;
+  margin-top: 20px;
+  margin-left: 0;
+  margin-bottom: 16px;
+  padding: 0;
+  justify-content: space-between;
+}
+.footer .social-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  fill: #FFFFFF;
+  transition: background-color var(--transition-duration-function);
+}
+.footer .social-icon {
+  display: flex;
+}
+.footer .social-link:hover,
+.footer .social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.address-footer {
+  display: block;
+  width: 231px;
+}
+
+.social-footer {
+  margin-top: 12px;
+  margin-left: 70px;
+}
+
+.social.title {
+  height: 16px;
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.address-list {
+  display: inline-block;
+  margin-top: 20px;
+}
+.address-list .link {
+  color: var(--primary-white-color);
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration: none;
+  transition: color var(--transition-duration-function);
+}
+.address-list .link.social {
+  color: var(--social-text-color);
+  transition: color var(--transition-duration-function);
+}
+.address-list .link:hover, .address-list .link:focus {
+  color: var(--accent-color);
+}
+.address-list .item:not(:last-child) {
+  margin-bottom: 9px;
 }/*# sourceMappingURL=main.css.map */
