--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,34 +2,40 @@
     display: flex;
     margin-left: auto;
 
+    .link {
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    
+        color: var(--primary-text-color);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+    
+        transition: color var(--transition-duration-function);
+        }
+    
+    .link.social {
+        color: var(--title-text-color);
+        }
+    
+    .link.current {
+        color: var(--accent-color);
+        }
+    
+    & .item:not(:last-child) {
+        margin-right: 50px;
+        }
+    
+    & .link:focus,
+    & .link:hover {
+        color: var(--accent-color);
+        fill: var(--accent-color);
+        }
 }
 
-
-
-.contacts .item:not(:last-child) {
-    margin-right: 50px;
-}
-
-
-.contacts .link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-
-    transition: color var(--transition-duration-function);
-}
-
-.contacts .link.social {
-    color: var(--title-text-color);
-
-}
 
 .icon-mail {
     fill: currentColor;
@@ -48,14 +54,3 @@
 
 
 
-.contacts .link:focus,
-.contacts .link:hover {
-    color: var(--accent-color);
-    fill: var(--accent-color);
-}
-
-.contacts .link.current {
-    /* position: relative;
-    display: block; */
-    color: var(--accent-color);
-}
