--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -19,6 +19,17 @@
     border-radius: 4px;
 
     transition: border var(--transition-duration-function), fill var(--transition-duration-function);
+
+    &:focus,
+    &:hover {
+        border: 1px solid var(--accent-color);
+        fill: var(--accent-color);
+        }
+
+    &:focus .link-icon,
+    &:hover .link-icon {
+        fill: var(--accent-color);
+        }
 }
 
 .icon-company {
@@ -26,14 +37,5 @@
 
 }
 
-.link-company:focus,
-.link-company:hover {
-    border: 1px solid var(--accent-color);
 
-    fill: var(--accent-color);
-}
 
-.link-company:focus .link-icon,
-.link-company:hover .link-icon {
-    fill: var(--accent-color);
-}
