--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,12 +1,31 @@
 .features-list {
     display: flex;
     gap: 30px;
+
+    .item {
+        flex-basis: calc((100% - 90px)/4);
+        }
+    
+    .title {
+        margin-top: 0;
+        margin-bottom: 10px;
+        color: var(--primary-text-color);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        }
+    
+    .text {
+        margin-top: 0;
+        margin-bottom: 0;
+        color: var(--title-text-color);
+        font-size: 14px;
+        line-height: 1.71;
+        }
 }
 
-.features-list .item {
-    flex-basis: calc((100% - 90px)/4);
-
-}
 
 .icon-features {
     display: flex;
@@ -19,23 +38,4 @@
     background-color: #F5F4FA;
     border-radius: 4px;
 
-}
-
-.features-list .title {
-    margin-top: 0;
-    margin-bottom: 10px;
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
-
-.features-list .text {
-    margin-top: 0;
-    margin-bottom: 0;
-    color: var(--title-text-color);
-    font-size: 14px;
-    line-height: 1.71;
 }
