--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,10 +3,21 @@
 
 @import './base/common';
 @import './base/section';
+@import './base/section-title';
 @import './base/container';
 
 @import './components/_form-btn-modal';
+@import './components/button';
 @import './components/contacts';
+@import './components/social-list';
+@import './components/logo';
+@import './components/backdrop';
+@import './components/window-modal';
+@import './components/modal-form';
+@import './components/mailing-form';
+@import './components/btn-nav';
+@import './components/btn-prim';
+@import './components/btn-sec';
 
 @import './layout/header';
 @import './layout/hero';
@@ -15,6 +26,7 @@
 @import './layout/team';
 @import './layout/client';
 @import './layout/work';
+@import './layout/footer';
 
 
 
