--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -2,6 +2,26 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+
+    .title {
+        margin-bottom: 4px;
+        color: var(--primary-text-color);
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        text-decoration: none;
+        }
+    
+    .text {
+        color: var(--title-text-color);
+        font-size: 16px;
+        line-height: 1.88;
+        text-decoration: none;
+        }
+    
+    .card {
+        flex-basis: calc((100% - 60px)/3);
+        }
 }
 
 .work-list a {
@@ -10,25 +30,7 @@
     transition: box-shadow var(--transition-duration-function);
 }
 
-.work-list .title {
-    margin-bottom: 4px;
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    text-decoration: none;
-}
 
-.work-list .text {
-    color: var(--title-text-color);
-    font-size: 16px;
-    line-height: 1.88;
-    text-decoration: none;
-}
-
-.work-list .card {
-    flex-basis: calc((100% - 60px)/3);
-}
 
 .work-card {
     padding-top: 20px;
@@ -80,10 +82,10 @@
     transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    a:hover &,
+    a:focus & {
+        transform: translateY(0);
+        }
 }
 
 
-a:hover .text-overlay,
-a:focus .text-overlay {
-    transform: translateY(0);
-}
