--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,7 +20,7 @@
     display: flex;
     margin-left: 93px;
 
-    .link {
+    .site-nav__link {
         position: relative;
         display: block;
         padding-top: 32px;
@@ -36,16 +36,16 @@
         transition: color var(--transition-duration-function);
         }
     
-    .link.current {
+    .site-nav__link_current {
         color: var(--accent-color);
         }
     
-    .link:focus,
-    .link:hover {
+    .site-nav__link:focus,
+    .site-nav__link:hover {
         color: var(--accent-color);
         }
     
-    & .item:not(:last-child) {
+    & .site-nav__item:not(:last-child) {
         margin-right: 50px;
         }
 
@@ -53,7 +53,7 @@
 
 
 
-.current::after {
+.site-nav__link_current::after {
     content: "";
     position: absolute;
     left: 0;
