--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,7 +16,6 @@
 }
 
 .site-nav {
-
     display: flex;
     margin-left: 93px;
 
@@ -66,7 +65,7 @@
 
 }
 
-.contacts .link:focus,
-.contacts .link:hover {
-    color: var(--accent-color);
-}
+// .contacts .link:focus,
+// .contacts .link:hover {
+//     color: var(--accent-color);
+// }
