--- a/sass/layout/_aboutus.scss
+++ b/sass/layout/_aboutus.scss
@@ -2,35 +2,36 @@
     padding-top: 0;
 }
 
-.heading {
+.route {
     display: flex;
     gap: 30px;
+
+    .route__box {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+    
+    .route__label {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        margin: 0;
+        width: 100%;
+        padding-top: 27px;
+        padding-bottom: 27px;
+    
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    
+        color: var(--primary-white-color);
+        background: rgba(47, 48, 58, 0.8);
+        }
 }
 
-.box {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.label {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    margin: 0;
-    width: 100%;
-    padding-top: 27px;
-    padding-bottom: 27px;
-
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    color: var(--primary-white-color);
-    background: rgba(47, 48, 58, 0.8);
-}
