--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -2,11 +2,11 @@
     display: flex;
     gap: 30px;
 
-    .item {
+    .features-list__item {
         flex-basis: calc((100% - 90px)/4);
         }
     
-    .title {
+    .features-list__title {
         margin-top: 0;
         margin-bottom: 10px;
         color: var(--primary-text-color);
@@ -17,25 +17,26 @@
         text-transform: uppercase;
         }
     
-    .text {
+    .features-list__text {
         margin-top: 0;
         margin-bottom: 0;
         color: var(--title-text-color);
         font-size: 14px;
         line-height: 1.71;
         }
+
+    .features-list__icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        height: 120px;
+    
+        margin-bottom: 30px;
+        background-color: #F5F4FA;
+        border-radius: 4px;
+    
+        }
 }
 
 
-.icon-features {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 120px;
-
-    margin-bottom: 30px;
-    background-color: #F5F4FA;
-    border-radius: 4px;
-
-}
