--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -19,7 +19,7 @@
         justify-content: space-between;
         }
     
-    .social-link {
+    .social-list__link {
         display: flex;
         width: 44px;
         height: 44px;
@@ -33,12 +33,12 @@
         transition: background-color var(--transition-duration-function);
         }
     
-    .social-icon {
+    .social-list__icon {
         display: flex;
         }
     
-    .social-link:hover,
-    .social-link:focus {
+    .social-list__link:hover,
+    .social-list__link:focus {
         background-color: var(--accent-color);
         }
 }
