--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,7 +1,7 @@
-.card {
-    margin-bottom: 0;
-    background-color: var(--primary-white-color);
-}
+// .team-list__card {
+//     margin-bottom: 0;
+//     background-color: var(--primary-white-color);
+// }
 
 .section-container {
     background-color: var(--button-color);
@@ -11,8 +11,8 @@
     display: flex;
     gap: 30px;
 
-    .title {
-        margin-top: 30px;
+    .team-list__title {
+        // margin-top: 30px;
         margin-bottom: 10px;
         color: var(--primary-text-color);
     
@@ -22,34 +22,41 @@
         text-align: center;
         }
     
-    .text {
-        margin-bottom: 30px;
+    .team-list__text {
+        margin-bottom: 16px;
         color: var(--title-text-color);
         font-size: 16px;
         line-height: 1.19;
         text-align: center;
         }
     
-    .card {
+    .team-list__card {
+        margin-bottom: 0;
+        background-color: var(--primary-white-color);
+
         flex-basis: calc((100% - 90px)/4);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         }
 
+    .team-list__employees {
+        padding-top: 30px;
+        padding-bottom: 30px;
+        }
 }
 
-.employees {
-    padding-top: 30px;
-    padding-bottom: 30px;
-
-    .title {
-        margin-top: 0;
-        margin-bottom: 10px;
-        }
+// .team-list__employees {
+//     padding-top: 30px;
+//     padding-bottom: 30px;
+// }
+    // .team-list__title {
+    //     margin-top: 0;
+    //     margin-bottom: 10px;
+    //     }
     
-    .text {
-        margin-top: 0;
-        margin-bottom: 16px;
-        }
-}
+//     .team-list__text {
+//         margin-top: 0;
+//         margin-bottom: 16px;
+//         }
+// }
 
